0. Stream API улучшения[#139168]